syntax = "proto3";
option java_package = "com.africastalking.proto";

message ClientTokenRequest {
  int64 nonce = 1;
  int32 capabilities = 2;
}

message ClientTokenResponse {
  string token = 1;
  int64 expiration = 2;
}

message SipCredentialsRequest { }

message SipCredentials {
  string host = 1;
  int32 port = 2;
  string username = 3;
  string password = 4;
}

message SipCredentialsResponse {
  repeated SipCredentials credentials = 1;
}


service SdkServerService {
    rpc getToken(ClientTokenRequest) returns (ClientTokenResponse) {}

    rpc getSipCredentials(SipCredentialsRequest) returns (SipCredentialsResponse) {}
}
